deploy/kubernetes/kafka/kafka-shared-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: kafka-shared
  name: kafka-shared
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
    - name: "9092"
      port: 9092
      targetPort: 9092
    - name: "9093"
      port: 9093
      targetPort: 9093
  selector:
    io.kompose.service: kafka-shared
